<resources>
    <string name="app_name">ComShareApp</string>
    <string name="txtViewActualizaciones">Últimas Actualizaciones</string>
    <string name="txtViewVideojuegos">Videojuegos</string>
    <string name="txtViewVerTodo">VER TODO</string>
    <string name="txtViewLibros">Libros</string>
    <string name="txtViewAnime">Anime</string>
    <string name="txtViewMassEffect">Mass Effect</string>
    <string name="btnSeguir">SEGUIR</string>
    <string name="txtViewPublicaciones">PUBLICACIONES</string>
    <string name="chipNuevo">NUEVO</string>
    <string name="chipTendencias">TENDENCIAS</string>
    <string name="txtViewUsuario">Usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="chkBoxRecordarme">Recordarme</string>
    <string name="btnSesionGoogle">Iniciar Sesión con Google</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="txtSinCuenta">¿No tienes ninguna cuenta?</string>
    <string name="txtViewRegistrate">Registrate</string>
    <string name="txtViewCorreoEl">¿Cual es tu correo electrónico?</string>
    <string name="txtViewIngreseContraseña">Ingresa una contraseña</string>
    <string name="txtViewConfirmaContraseña">Confirma tu contraseña</string>
    <string name="txtViewConfirmaTuEdad">Por último, confirma tu edad</string>
    <string name="chkBoxConfirma18">Confirmo que soy mayor de 18 años</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="textSeguir">Seguir</string>
    <string name="textSiguiendo">Siguiendo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtViewComunidad">Comunidad</string>
    <string name="txtViewAñadeTitulo">Añade un Titulo</string>
    <string name="yxyViewPiensas">Comparte lo que piensas ....</string>
    <string name="btnPublicar">Publicar</string>
    <string name="txtViewComunidades">Comunidades</string>

    <string name="txtViewFecha">14/08/2022</string>
    <string name="prefs_file">com.epngrupo1moviles.comshareapp.PREFERENCE_FILE_KEY</string>
    <string name="editTextBusqueda">Buscar...</string>
</resources>