<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkboxConfirmarAños"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/txtViewCorreoEl"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCorreoElectronico"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/red_hat_text"
        android:textColor="#4C8BF5"
        android:textSize="16sp"
        android:theme="@style/CampoTextoAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/txtViewIngreseContraseña"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCorreoElectronico" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:fontFamily="@font/red_hat_text"
        android:textColor="#4C8BF5"
        android:textSize="16sp"
        android:theme="@style/CampoTextoAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/txtViewConfirmaContraseña"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextContrasena" />

    <EditText
        android:id="@+id/editTextConfirmarContrasena"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:fontFamily="@font/red_hat_text"
        android:textColor="#4C8BF5"
        android:textSize="16sp"
        android:theme="@style/CampoTextoAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/txtViewConfirmaTuEdad"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmarContrasena" />

    <CheckBox
        android:id="@+id/checkBoxEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/chkBoxConfirma18"
        android:textColor="#4C8BF5"
        android:textSize="16sp"
        android:theme="@style/CampoTextoAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView26" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#4C8BF5"
        android:text="@string/btnRegistrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxEdad" />


</androidx.constraintlayout.widget.ConstraintLayout>