<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="650dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="796dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="206dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="52dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_final_removebg_preview" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/txtViewUsuario"
                    android:textColor="#587BF8"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.106"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:id="@+id/txtViewUsuario"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="Email"
                    android:textColor="#4C8BF5"
                    android:textSize="16sp"
                    android:theme="@style/CampoTextoAzul"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/txtViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/txtContraseña"
                    android:textColor="#587BF8"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.114"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewUsuario" />

                <EditText
                    android:id="@+id/txtViewContrasena"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="Contraseña"
                    android:textColor="#4C8BF5"
                    android:textSize="16sp"
                    android:theme="@style/CampoTextoAzul"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewPassword" />

                <CheckBox
                    android:id="@+id/checkBoxRecordarme"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/chkBoxRecordarme"
                    android:textColor="#587BF8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewContrasena" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="o"
                    android:textColor="#587BF8"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnIniciarSesionGoogle"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FFFFFF"
                    android:drawableStart="@drawable/google"
                    android:text="@string/btnSesionGoogle"
                    android:textColor="#587BF8"
                    android:theme="@style/CampoTextoAzul"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#4C8BF5"
                    android:text="@string/btnIngresar"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxRecordarme" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/red_hat_text"
                    android:text="@string/txtSinCuenta"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintEnd_toStartOf="@+id/txtViewRegistrar"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionGoogle" />

                <TextView
                    android:id="@+id/txtViewRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/red_hat_text"
                    android:text="@string/txtViewRegistrate"
                    android:textColor="#587BF8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.757"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionGoogle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>