<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPublicar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="409dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonCerrar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/red_hat_text"
            android:gravity="center"
            android:text="@string/txtViewComunidad"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="389dp"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <EditText
            android:id="@+id/txtTituloPublicacion"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/txtViewAñadeTitulo"
            android:inputType="textPersonName"
            android:textColor="#4C8BF5"
            android:textColorHint="#4C8BF5"
            android:theme="@style/CampoTextoAzul"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="100"
            android:textColor="#4C8BF5"
            android:theme="@style/CampoTextoMoEditable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtTituloPublicacion"
            app:layout_constraintTop_toTopOf="parent"
            tools:inputType="none" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="374dp"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/yxyViewPiensas"
        android:inputType="textPersonName"
        android:textColor="#587BF8"
        android:textColorHint="#4C8BF5"
        android:theme="@style/CampoTextoGrande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

    <Button
        android:id="@+id/btnPublicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/red_hat_text"
        android:text="@string/btnPublicar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
</androidx.constraintlayout.widget.ConstraintLayout>